documentation expanded
